--- a/src/.templates/_layout.html
+++ b/src/.templates/_layout.html
@@ -47,8 +47,8 @@
             <footer>
                 <div class="container mt-5">
                     <div class="row p-3">
-                        <div class="col">
-                            Blog post text end stuff goes here
+                        <div class="col text-right">
+                            Jess and Code - by jess k. - <a href="https://github.com/cheeplusplus">github</a>
                         </div>
                     </div>
                 </div>
